--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
 	<title>Random Quotes</title>
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.css?a=1001">
 </head>
 <body>
 	<div class="container">
 		<div id="quote-box">
 			<p class="quote">You can do anything but not everything</p>
-			<p class="source">David Allen<span class="citation">Making It All Work</span><span class="year">2009</span></p>
+			<p class="source"><span class="source_actual"></span><span class="citation"></span><span class="year"></span></p>
+			<p class="tags"></p>
 		</div>
 		<button id="loadQuote">Show another quote</button>
 	</div>
 	<script src="js/lib/underscore.js"></script>
 	<script src="js/lib/jquery.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/app.js?a=1001"></script>
 </body>
 </html>
